--- a/index.html
+++ b/index.html
@@ -2,8 +2,24 @@
 <html>
 <head>
 	<title>廖宇的博客</title>
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-	<div>boke</div>
+	<div id="page">
+		<header>
+			<div id="header_left">
+				<img src="./img/header_left.png" height="100" alt="LiaoYu's Blog">
+				<div id="name" style="display: table-cell;vertical-align: middle;"><strong>LiaoYu's &nbsp&nbsp&nbsp&nbsp<br>Blog</strong></div>
+			</div>
+			<nav>
+				<ul>
+					<li><a href=""><span>博客</span></a></li>
+					<li><a href=""><span>关于我</span></a></li>
+					<li><a href=""><span>和我联系</span></a></li>
+				</ul>
+			</nav>
+		</header>
+		
+	</div>
 </body>
 </html>
